syntax = "proto3";
package  tv.uob.grpc;

option java_multiple_files = true;
option java_package = "tv.uob.grpc.channels";

import "ChannelId.proto";
import "UserId.proto";

message Channel {
    int64 id = 1;
    Owner owner = 2;
    string title = 3;
    string description = 4;
    string playbackURL = 5;
}

message Owner {
    string userId = 1;
    string email = 2;
    string username = 3;
}

message InitialChannelData {
    string userId = 1;
    int64 channelId = 2;
}

service ChannelService {
    rpc InitializeChannel(InitialChannelData) returns (Channel) {}
    rpc GetChannelById(ChannelId) returns (Channel) {}
    rpc GetChannelForUser(UserId) returns (Channel) {}
    rpc UpdateChannel(Channel) returns (Channel) {}
}